[tool.poetry]
name = "tach"
version = "0.1.0"
description = ""
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "gpl-3.0-or-later"

[tool.poetry.dependencies]
apispec-webframeworks = "*"
cleo = "*"
inflection = "*"
marshmallow-sqlalchemy = "*"
sqlalchemy-utils = "*"
python = "^3.7"
tornado = "*"

[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry.scripts]
tach = "tach.cli:app.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
